[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/gate.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ChangeStage.gd" type="Script" id=2]
[ext_resource path="res://Sounds/next_level.wav" type="AudioStream" id=3]
[ext_resource path="res://Fonts/AmaticSC-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.6363, 109.911 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 7
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "needtokill"
loop = true

[node name="ChangeStage" type="Area2D"]
scale = Vector2( 0.3, 0.25 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 49.6467, -1.9133 )
shape = SubResource( 1 )

[node name="ChangeStage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.756863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -20.5
margin_right = 160.0
margin_bottom = 20.5
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 184.0
custom_fonts/font = SubResource( 2 )
text = "1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Control/ColorRect/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -151.0
custom_fonts/font = SubResource( 3 )
text = "Următorul nivel este:"
align = 2
valign = 1

[node name="Control2" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -170.0
margin_right = -50.0
margin_bottom = 36.0
color = Color( 0, 0, 0, 0.427451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 0.999985
custom_fonts/font = SubResource( 4 )
text = "Verifică dacă ai omorât toți inamicii, dacă ai colectat toate paginile sau dacă ai făcut alegerea înainte de a trece nivelul!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 5 )
anims/needtokill = SubResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_ChangeStage_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ChangeStage_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
